--- a/views/error.html
+++ b/views/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Product</title>
+    <title>Not Found</title>
   </head>
   <body>
     <header>
@@ -16,10 +16,7 @@
       </nav>
     </header>
     <main>
-      <form action="/add-product" method="POST">
-        <input type="text" name="title" />
-        <button type="submit">Add Product</button>
-      </form>
+      <div><h1>Error - page not found 404</h1></div>
     </main>
   </body>
 </html>
