--- a/views/error.html
+++ b/views/error.html
@@ -5,78 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Not Found</title>
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-        font-family: sans-serif;
-      }
-      main {
-        padding: 1rem;
-      }
-      .main-header {
-        width: 100%;
-        height: 3.5rem;
-        background-color: #cdb03d;
-        padding: 0 1.5rem;
-      }
-      .main-header__nav {
-        height: 100%;
-        display: flex;
-        align-items: center;
-      }
-      .main-header__item-list {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-      }
-      .main-header__item {
-        margin: 0 1rem;
-        padding: 0;
-      }
-      .main-header__item a {
-        text-decoration: none;
-        color: rgb(0, 0, 0);
-      }
-      .main-header__item a:hover,
-      .main-header__item a:active,
-      .main-header__item a.active {
-        color: rgb(104, 21, 172);
-      }
-      .product-form {
-        width: 20rem;
-        max-width: 80%;
-        margin: auto;
-      }
-
-      .form-control {
-        margin: 1rem 0;
-      }
-      .form-control input,
-      .form-control label {
-        display: block;
-        width: 100%;
-      }
-      .form-control input {
-        border: solid 1px #cdb03d;
-        font-family: inherit;
-        border-radius: 2px;
-      }
-      button {
-        font: inherit;
-        border: 1px solid rgb(0, 0, 0);
-        background-color: white;
-        color: rgb(104, 21, 172);
-        border-radius: 3px;
-        cursor: pointer;
-      }
-      button:hover,
-      button:active {
-        background-color: rgb(104, 21, 172);
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <header class="main-header">
