--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,32 +1,25 @@
 .product-form {
-  width: 20rem;
-  max-width: 80%;
-  margin: auto;
+    width: 20rem;
+    max-width: 90%;
+    margin: auto;
 }
 
-.form-control {
-  margin: 1rem 0;
+.product-item {
+    width: 20rem;
+    max-width: 95%;
 }
-.form-control input,
-.form-control label {
-  display: block;
-  width: 100%;
+
+.product__title {
+    font-size: 1.2rem;
+    text-align: center;
 }
-.form-control input {
-  border: solid 1px #cdb03d;
-  font-family: inherit;
-  border-radius: 2px;
+
+.product__price {
+    text-align: center;
+    color: #4d4d4d;
+    margin-bottom: 0.5rem;
 }
-button {
-  font: inherit;
-  border: 1px solid rgb(0, 0, 0);
-  background-color: white;
-  color: rgb(104, 21, 172);
-  border-radius: 3px;
-  cursor: pointer;
-}
-button:hover,
-button:active {
-  background-color: rgb(104, 21, 172);
-  color: white;
+
+.product__description {
+    text-align: center;
 }
