--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,4 +3,23 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if(products.length > 0) { %>
+                <ul>
+                    <% products.forEach(p => { %>
+                        <li>
+                            <p>
+                            <%= p.productData.title %> (<%= p.qty %>)</p>
+                            <form action="/cart-delete-item" method='POST'>
+                                <button type="submit" class="btn">Delete</button>
+                            </form>
+                        
+                        </li>
+                    <% }) %>
+                </ul>
+            
+            <% } else { %>
+                
+            <% } %>
+        </main>
         <%- include('../includes/end.ejs') %>
